<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="memoryPlus">M+</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="memoryMinus">M-</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multiply">x</string>
    <string name="showMemory">MR</string>
    <string name="clear">C</string>
    <string name="equal">=</string>
    <string name="divide">/</string>
    <string name="clearMemory">MC</string>
</resources>